<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/menuLine"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_500">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/buttList"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_alignParentStart="true"
            android:foreground="@drawable/list2"/>

        <Button
            android:id="@+id/buttGear"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:foreground="@drawable/gear3"/>

    </RelativeLayout>

    <Button
        android:id="@+id/buttAddCollection"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/menuLine"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/addCollection"
        android:visibility="invisible"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttAddCollection"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/layoutCollectionsForData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttAllWords"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:text="@string/allWords"
                android:visibility="invisible"/>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lineButtons1"
        android:layout_width="wrap_content"
        android:layout_below="@+id/menuLine"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttDeleteWord"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/deleteWord"
            android:backgroundTint="@color/red"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttAddWord"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/addNewWord"
            android:textSize="14sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/edWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineButtons1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/newWord"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttCheckWord"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/edWord"
        android:text="@string/addDescription"
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvFromSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttCheckWord"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:text="@string/fromSite"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/edDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFromSite"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/description"
        android:inputType="textCapSentences|textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttAdd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/edDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/add"
        android:textSize="20sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttShuffleCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineButtons1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/ShuffleCards"/>

    <Button
        android:id="@+id/buttWord"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/buttShuffleCards"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="30sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform" />


    <TextView
        android:id="@+id/tvCountWords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/buttWord"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lineButtons2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCountWords"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttPrevious"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/previous"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttNext"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineButtons3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineButtons2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttToStart"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/toStart"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttToEnd"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/toEnd"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>